<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyanbackgorund"
    tools:context=".activities.fragments.AutorizacionFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/authorization_transaction"
        android:textColor="@color/black"
        android:textSize="@dimen/text_24px"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white_basic_200"
        app:cardElevation="50dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_basic_200">


            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/form"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/text_20px"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="10dp"
                android:text="@string/commerce_cod"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18px"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView7" />

            <EditText
                android:id="@+id/commerceCodeInput"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black"
                android:background="@drawable/round_corners"
                android:textSize="@dimen/text_18px"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="10dp"
                android:text="@string/terminal_cod"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18px"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/terminalCodeInput"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18px"
                android:background="@drawable/round_corners"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="10dp"
                android:text="@string/amount_cod"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18px"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <EditText
                android:id="@+id/amountInput"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18px"
                android:inputType="numberDecimal"
                android:background="@drawable/round_corners"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="10dp"
                android:text="@string/card_number"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18px"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/cardInput"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18px"
                android:inputType="number"
                android:background="@drawable/round_corners"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView6" />

            <Button
                android:id="@+id/approvedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/approved"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18px"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="15dp"
                android:textAllCaps="false"
                android:background="@drawable/round_corners_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>